--- a/ui.apps/src/main/content/jcr_root/apps/SlingTest/components/structure/StaticPageComponent/StaticPageComponent.html
+++ b/ui.apps/src/main/content/jcr_root/apps/SlingTest/components/structure/StaticPageComponent/StaticPageComponent.html
@@ -1,1 +1,3 @@
-This is a static page.
+<sly data-sly-include="header.html" />
+<sly data-sly-include="body.html" />
+<sly data-sly-include="footer.html" />
